--- a/Metro.ipynb
+++ b/Metro.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -37,17 +39,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "test_path = 'D:\\\\data\\\\Metro\\\\Metro_testA\\\\'\n",
+    "test_path = 'E:\\\\data\\\\Metro\\\\Metro_testA\\\\'\n",
+    "f = os.listdir(test_path)\n",
+    "# for i in f:\n",
+    "#     if i[0] != 'r': continue\n",
+    "#     oname = test_path + i\n",
+    "#     nname = test_path + i.split('.')[0].split('_')[1] + '_flow.csv'\n",
+    "#     os.rename(oname, nname)\n",
+    "\n",
+    "except_list = ['01', '05', '06', '12', '13', '19', '20']\n",
     "submit = pd.read_csv(test_path + \"testA_submit_2019-01-29.csv\")\n",
-    "result = pd.read_csv(test_path + \"result.csv\")\n",
-    "submit['inNums'] = result['inNums'] + 0.0\n",
-    "submit['outNums'] = result['outNums'] + 0.0\n",
+    "cnt = 0\n",
+    "for i in f:\n",
+    "    if i[0] != '2' or i.split('_')[0].split('-')[2] in except_list: continue\n",
+    "    print(i)\n",
+    "    result = pd.read_csv(test_path + i)\n",
+    "    if cnt != 0:\n",
+    "        submit['inNums'] += result['inNums']\n",
+    "        submit['outNums'] += result['outNums']\n",
+    "    else:\n",
+    "        submit['inNums'] = result['inNums']\n",
+    "        submit['outNums'] = result['outNums']\n",
+    "    cnt += 1\n",
+    "\n",
+    "print(cnt)\n",
+    "submit['inNums'] /= cnt\n",
+    "submit['outNums'] /= cnt\n",
     "submit.info()\n",
     "submit.to_csv(\"testA_submit_2019-01-xx.csv\", index=False, encoding='utf8')\n",
     "submit"
